--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,19 +9,20 @@ import Spotyfi from "../components/Spotyfi.astro";
 import About from "../components/About.astro";
 import Instagramrulle from "../components/Instagramrulle.astro";
 import Nyhedsbrev from "../components/Nyhedsbrev.astro";
+import Bookingform from "../components/Bookingform.astro";
 ---
 
 <Layout>
   <body>
     <Header title="YEPHA" />
     <main>
-   
-
       <Spotyfi />
       <Liveevents />
       <About />
 
       <Instagramrulle />
+
+      <Bookingform />
     </main>
 
     <Footer />
