--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -136,9 +136,10 @@ import Spotyfi from "../components/Spotyfi.astro";
 </Layout>
 
 <style>
-
   .overskrift {
     text-align: center;
+    font-family: "Inter", serif;
+    font-style: normal;
   }
   .part3 {
     display: grid;
@@ -157,6 +158,8 @@ import Spotyfi from "../components/Spotyfi.astro";
     display: inline-block;
     border-bottom: 1px solid black;
     padding-left: 170px;
+    font-family: "Inter", serif;
+    font-style: normal;
   }
 
   .streg-container {
@@ -166,6 +169,8 @@ import Spotyfi from "../components/Spotyfi.astro";
   .streg2 {
     display: inline-block; /* Sørger for, at teksten er som et separat element */
     position: relative;
+    font-family: "Inter", serif;
+    font-style: normal;
   }
   .streg2 {
     display: flex;
@@ -244,57 +249,47 @@ import Spotyfi from "../components/Spotyfi.astro";
     font-family: "Inter", serif;
     line-height: 20px;
   }
- 
 
-
-   @media (max-width: 1024px) {
-
+  @media (max-width: 1024px) {
     .img {
-    width: 100px;
-  }
-  .part1 {
-    display: flex;
-    text-align: center;
-    line-height: 2em;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
+      width: 100px;
+    }
+    .part1 {
+      display: flex;
+      text-align: center;
+      line-height: 2em;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
 
     .part2 {
-  
+    }
+    .faktabox {
+    }
+
+    .liste {
+      margin: 50px;
+    }
+
+    .mobilimg1 {
+      display: none;
+    }
+
+    .img1 {
+      display: none;
+    }
+
+    .img2 {
+      display: none;
+    }
+    .img3 {
+      display: none;
+    }
+
+    .part3 {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr); /* 3 kolonner */
+      line-height: 1.5;
+    }
   }
- .faktabox {
-
-  }
-  
-  .liste {
-margin: 50px;  
-}
-
-.mobilimg1 {
-  display: none; 
-}
-
-.img1 {
-  display: none;
-}
-
-  .img2 {
-display: none;
-
-  }
-.img3 {
-
-  display: none;
-}
-
-  .part3 {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr); /* 3 kolonner */
-    line-height: 1.5;
-    
-  }
-
- }
 </style>
