--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -7,7 +7,6 @@ import Button from "../components/Button.astro";
 import Spotyfi from "../components/Spotyfi.astro";
 ---
 
-
 <Layout>
   <body>
     <Header title="ACTING" />
@@ -139,7 +138,7 @@ import Spotyfi from "../components/Spotyfi.astro";
 <style>
   .overskrift {
     text-align: center;
-    font-family: font-family: "Inter", serif;
+    font-family: "Inter", serif;
   }
   .part3 {
     display: grid;
@@ -158,6 +157,7 @@ import Spotyfi from "../components/Spotyfi.astro";
     display: inline-block;
     border-bottom: 1px solid black;
     padding-left: 170px;
+    font-family: "Inter", serif;
   }
 
   .streg-container {
@@ -167,6 +167,7 @@ import Spotyfi from "../components/Spotyfi.astro";
   .streg2 {
     display: inline-block; /* Sørger for, at teksten er som et separat element */
     position: relative;
+    font-family: "Inter", serif;
   }
   .streg2 {
     display: flex;
@@ -245,56 +246,47 @@ import Spotyfi from "../components/Spotyfi.astro";
     font-family: "Inter", serif;
     line-height: 20px;
   }
- 
 
-
-   @media (max-width: 1024px) {
-
+  @media (max-width: 1024px) {
     .img {
-    width: 100px;
-  }
-  .part1 {
-    display: flex;
-    text-align: center;
-    line-height: 2em;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
+      width: 100px;
+    }
+    .part1 {
+      display: flex;
+      text-align: center;
+      line-height: 2em;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
 
     .part2 {
-  
+    }
+    .faktabox {
+    }
+
+    .liste {
+      margin: 50px;
+    }
+
+    .mobilimg1 {
+      display: none;
+    }
+
+    .img1 {
+      display: none;
+    }
+
+    .img2 {
+      display: none;
+    }
+    .img3 {
+      display: none;
+    }
+
+    .part3 {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr); /* 3 kolonner */
+      line-height: 1.5;
+    }
   }
- .faktabox {
-
-  }
-  
-  .liste {
-margin: 50px;  
-}
-
-.mobilimg1 {
-  display: none; 
-}
-
-.img1 {
-  display: none;
-}
-
-  .img2 {
-display: none;
-
-  }
-.img3 {
-
-  display: none;
-}
-
-  .part3 {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr); /* 3 kolonner */
-    line-height: 1.5;
-  }
-
- }
 </style>
