--- a/src/components/Spotyfi.astro
+++ b/src/components/Spotyfi.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 
   <div class="spotify">
     <img class="img" src="/billeder/spotyfi.svg" alt="" />
-    <p class="p"><br />EXPLORE ON <br /><br />{title}<br /></p>
+    <p class="p"><br />EXPLORE ON <br /><br />SPOTYFI<br /></p>
     <img src="/billeder/Arrow.jpg" alt="pil" />
   </div>
 </div>
