--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -11,16 +11,20 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: center;
-    gap: 80px;
+    gap: 200px;
+    padding-top: 150px;
+    padding-bottom: 150px;
   }
 
   .tekstabout {
     display: flex;
     text-align: center;
+    margin-left: 100px;
   }
 
   .vinylplade {
     width: 200px;
+    margin-left: 300px;
   }
 
   .streg1 {
@@ -29,10 +33,10 @@
     font-family: "Inter", serif;
     display: flex;
     position: relative;
-    right: 0px;
+    right: 30px;
     display: inline-block;
     border-bottom: 1px solid black;
-    padding-left: 170px;
+    padding-left: 350px;
   }
 
   .container {
