--- a/src/components/FormComponent.astro
+++ b/src/components/FormComponent.astro
@@ -61,7 +61,7 @@ import Button from "../components/Button.astro";
     text-decoration: none;
   }
 
-  .button {
+  .Button {
     display: flex;
     justify-content: center;
   }
